# mslearn

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
document-inteligence/: total.py  total2.py  total3.py
document-inteligence/Identity/: identity.py
document-inteligence/businesscard/: .env.example  businesscard.py
document-inteligence/creditcard/: creditcard.py
document-inteligence/data/: receipt2_result.csv
document-inteligence/general/: general.py
document-inteligence/invoice/: invoce.py
document-inteligence/ocr/: ocr-local.py  ocr-url.py  ocr.py  requirement.txt
document-intelligence/: .env.example  total2.py  total3.py
document-intelligence/data/: ID1_result.csv  mock_invoice_english_result.csv  mock_invoice_korean_result.csv  receipt1_result.csv
document-intelligence/invoice/: invoce2.py  invoce3.py
document-intelligence/layout/: layout.py
document-intelligence/ocr/: sample.ipynb  test.txt
document-intelligence/receipts/: receipts.py
mslearn-ai-agents/: .gitignore  index.md  readme.md
mslearn-ai-agents/Instructions/Exercises/: 01-build-agent-portal-and-vscode.md  02-agent-custom-tools.md  03-mcp-integration.md  04-integrate-agent-with-foundry-iq.md  05a-m365-teams-integration.md  (+5 more)
mslearn-ai-speech/: .env.example  batch-stt.py  speech_synthesis.py  speech_synthesis2.py  stt.py  stt2.py  to-way.py  to-way2.py  translate.py  translate2.py  tts.py  tts2.py
mslearn-ai-speech/data/: interpret_result.txt  stt_result.txt  translate_result.txt
mslearn-openai/: .env.example  .gitignore  requirement.txt
(+59 files in other folders)
