[project]
name = "mslearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-sdk>=1.1.0",
    "agent-framework>=1.10.0",
    "azure-ai-agents>=1.1.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-ai-formrecognizer>=3.3.3",
    "azure-ai-projects>=2.3.0",
    "azure-cognitiveservices-speech>=1.50.0",
    "azure-core>=1.41.0",
    "azure-identity>=1.25.3",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.30.0",
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
